--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,6 +14,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+  text-align: right;
   width: 100%;
   height:50px; 
   background-color: #000;
@@ -23,10 +24,8 @@ body {
 }
 
 #prod-footer {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+  margin-right:30px;
+  margin-top: 15px;
 }
 
 #submit {
