--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title>FUSION</title>
     <%= stylesheet_link_tag "reset", "text", "960", "application" %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
