--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>FUSION</title>
-    <%= stylesheet_link_tag "reset", "text", "960", "application" %>
-    <%= javascript_include_tag :defaults %>
+    <%= stylesheet_link_tag "reset", "text", "960", "application", :cache => true %>
+    <%= javascript_include_tag :defaults, :cache => true %>
+    <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
