--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= @project.name %>
+
 <%= form_for [@project, @invitation] do |f| %>
 
 <% if @invitation.errors.any? %>
