--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
   <head>
     <title>FUSION</title>
     <%= stylesheet_link_tag "reset", "text", "960", "application", :cache => true %>
-    <%= javascript_include_tag :defaults, :cache => true %>
+    <%= javascript_include_tag 'jquery', 'ui', 'rails', 'application', :cache => true %>
+    <%= yield(:head) %>
     <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
-    <%= yield(:head) %>
   </head>
   <body>
     <%= yield %>
