--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'imgareaselect-animated' %>
+  <%= javascript_include_tag 'jquery.imgareaselect.min' %>
+<% end %>
+
 <p id="notice"><%= notice %></p>
 <p>
   <b>Name:</b>
@@ -9,12 +14,22 @@
   <%= @task.complete %>
 </p>
 
+<div id="annotations">
 <% @comments.each do |comment| %>
   <%= comment.message %>
   
   <% comment.images.each do |image| %>
-    <% unless image.new_record? %>
-      <%= image_tag image.url(:small) %>
+    <%= div_for image do %>
+      <% unless image.new_record? %>
+        <%= image_tag image.url(:large) %>
+        Version: <%= image.version %>
+  <%= link_to "New Note", new_comment_image_annotation_path(image), :remote => true %>
+        
+        <div class="notes">
+  <% image.annotations.each do |annotation| %> 
+    <%= link_to annotation.text, comment_image_annotation_path(image, annotation), :remote => true %>
+  <% end %>
+      <% end %>
     <% end %>
   <% end %>
   
@@ -22,4 +37,6 @@
 
 <%= render :partial => 'comments/form' %>
 
+<div class="result">
 
+</div>
