--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <%= yield %>
+    <div class="container_12">
+      <div id="header" class="grid_12">
+        Welcome <%= current_user.name %>, <%= link_to "Logout", logout_path %>
+      </div>
+
+      <%= yield %>
+
+      <div id="footer" class="grid_12">
+        Footer
+      </div>
+    </div>
   </body>
 </html>
