--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,32 +1,12 @@
 body { 
   background: #333;
-  color: #ccc;
+  color: #e6e6e6;
 }
 
 .milestones {
   margin-left: 20px;
 }
 
-#header {
-  height:30px; 
-  background-color: #000;
-  -webkit-box-shadow: 0px 5px 8px #888;
-  border-bottom-right-radius: 10px 5px;
-  border-bottom-left-radius: 10px 5px;
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  text-align: right;
-  width: 100%;
-  height:50px; 
-  background-color: #000;
-  -webkit-box-shadow: 0px -5px 8px #888;
-  border-top-right-radius: 10px 5px;
-  border-top-left-radius: 10px 5px;
-}
 
 #remember, #forgot {
   text-align: right;
