--- a/app/views/annotations/create.js.erb
+++ b/app/views/annotations/create.js.erb
@@ -1,2 +1,2 @@
-$("#comment_image_<%= @annotation.image.id %> .notes").append("<p> <%= escape_javascript(link_to @annotation.text, comment_image_annotation_path(@annotation.image, @annotation), :remote => true) %> </p>");
+$("#annotation_list").append("<p> <%= escape_javascript(link_to annotation_text(@annotation), comment_image_annotation_path(@annotation.image, @annotation), :remote => true) %> </p>");
 $("#new_annotation").hide();
