--- a/app/views/drawings/create.js.erb
+++ b/app/views/drawings/create.js.erb
@@ -1,1 +1,1 @@
-$("#drawing_list").append("<p> <%= escape_javascript(link_to "Drawing", comment_image_drawing_path(@drawing.image, @drawing), :remote => true) %> </p>");
+$("#drawing_list").append("<p> <%= escape_javascript(link_to drawing_text(@drawing), image_drawing_path(@drawing.image, @drawing), :remote => true) %> </p>");
