quick patch for annotations

--- a/app/views/annotations/show.js.erb
+++ b/app/views/annotations/show.js.erb
@@ -1,1 +1,3 @@
+$('#canvas').hide();
+$('#ias_image').show();
 ias = $('#ias_image img').imgAreaSelect({ x1: <%= @annotation.x1 %>, y1: <%= @annotation.y1 %>, x2: <%= @annotation.x2 %>, y2: <%= @annotation.y2 %> });
