--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,15 +1,7 @@
 <div id="projects" class="grid_3">
   <h2><%= link_to @project.name, @project %></h2>
-  <h4>Tasks</h4>
-  <p>Sort by: <%= link_to "due date", project_path(@project, :sort => "due") %> | <%= link_to "priority", project_path(@project, :sort => "priority") %> | <%= link_to "name", project_path(@project, :sort => "name") %></p>
-  <ul>
-    <% @project.tasks.each do |t| %>
-      <% unless t.new_record? %>
-        <span class="ui-icon ui-icon-carat-1-e"></span><li><%= link_to t.name, project_task_path(t.project, t) %> <%= link_to project_task_path(t.project, t), :method => :delete, :confirm => "Are you sure?" do %><span style="float:right" class="ui-icon ui-icon-close"></span><% end %></li>
-      <% end %>
-    <% end %>
-  </ul>
-  <%= render 'tasks/form', :locals => { :project => @project } %>
+  <h4>Milestones</h4>
+  <%= render @project.milestones %>
 </div>
 
 <div class="grid_9">
@@ -17,7 +9,7 @@
   <ul id="aspects">
   
     <li id="graphics">
-      <div class="title">Graphics</div>
+      <div class="title ui-state-default ui-corner-all">Graphics</div>
       <div class="info">
         <%= render @images %>
         <br />
@@ -26,7 +18,7 @@
       </div>
     </li>
     <li id="graphics">
-      <div class="title">Messages</div>
+      <div class="title ui-state-default ui-corner-all">Messages</div>
       <div class="info">
         <%= render @comments %>
         <br />
