--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New client</h1>
+<div class="grid_12">
+  <h1>New client</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', clients_path %>
+  <%= link_to 'Back', clients_path %>
+</div>
