--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,6 @@
 <% unless comment.new_record? %>
-  <span style="color:#666;font-style:oblique"><%= comment.user.name %>:</span> <%= comment.message %> <small style="color: #666;font-size:12px;"><%= time_ago_in_words comment.updated_at %>ago</small>
+  <span><%= link_to comment.user.name, comment.user %> </span> <%= comment.message %><br /><small style="color: #666;font-size:12px;"><%= time_ago_in_words comment.updated_at %> ago</small>
+  <%= link_to comment, :method => :delete, :confim => "Are you sure?" do %><span style="float:right" title="Delete" class="ui-icon ui-icon-close ui-state-default ui-corner-all"></span><% end %><%= link_to edit_comment_path(comment) do %><span style="float:right" title="Edit" class="ui-icon ui-icon-pencil ui-state-default ui-corner-all"></span><% end %>
 <% end %> 
 
 <br />
