--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,25 +1,34 @@
 <div class="grid_3">
-  <h3>Your Projects</h3>
-  <% @projects.each do |p| %>
-    <p><%= link_to p.name, p %></p>
-    <%= link_to "new project", new_project_path %>
-  <% end %>
+  <h3 class="title ui-state-default ui-corner-all">Projects</h3>
+  <div class="info">
+    <%= link_to new_project_path do %>New Project<span style="float:right;margin-bottom:20px;" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
+    <div class="clear"></div>
+    <% @projects.each do |p| %>
+      <p>
+        <%= link_to p.name, p %> <span style="color:#666;"><%= pluralize(p.users.count, "user") %></span>
+        <%= link_to p, :method => :delete, :confim => "Are you sure?" do %><span style="float:right" title="Add" class="ui-icon ui-icon-close ui-state-default ui-corner-all"></span><% end %><%= link_to edit_project_path(p) do %><span style="float:right" title="Edit" class="ui-icon ui-icon-pencil ui-state-default ui-corner-all"></span><% end %>
+      </p>
+    <% end %>
+  </div>
 </div>
 <div class="grid_3">
-  <h3>Users</h3>
-  <% User.all.each do |u| %>
-    <%= link_to u.name, u %>
-  <% end %>
-  <p>
-    <%= link_to "new client", new_client_path %>
-    <%= link_to "new employee", new_employee_path %>
-  </p>
+  <h3 class="title ui-state-default ui-corner-all">Users</h3>
+  <div class="info"> 
+    <h6 style="float:left;">Employees</h6><%= link_to new_employee_path do %><span style="float:right" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
+    <%= render Employee.all %>
+    <h6 style="float:left;">Clients</h6><%= link_to new_client_path do %><span style="float:right" title="Delete" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
+    <%= render Client.all %>
+  </div>
 </div>
 
 <div class="grid_6">
-  <h3>Messages</h3>
-  <p>
-    Here is all the messages that have been sent to you from a task.
-  </p>
+  <h3 class="title ui-state-default ui-corner-all">News Feed</h3>
+  <div class="info">
+    <% current_user.comments.each do |c| %>
+      <p>
+        <%= render c %>
+      </p>
+    <% end %>
+  </div>
 </div>
 
