--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,3 +1,3 @@
 <% unless image.new_record? %>
-  <%= link_to(image_tag(image.attachment(:small), :height => 100), project_image_path(image.project, image)) %>
+  <%= link_to(image_tag(image.attachment(:small), :height => 100, :class => "ui-state-default ui-corner-all", :style => "background:none"), project_image_path(image.project, image)) %>
 <% end %>
