--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,8 @@
         <div id="login" class="grid_9 omega">
           <h1>PROD4ever</h1>
           <% if logged_in? %>
-            <p>Welcome <%= current_user.name %>, <%= link_to "Logout", logout_path %></p>
+            <p>Welcome <%= link_to current_user.name, dashboard_path %>, <%= link_to "Logout", logout_path %></p>
           <% end %>
-          <%= link_to "Dashboard", dashboard_path %>
         </div>
       </div>
 
