--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for([@project, @milestone]) do |f| %>
+
   <% if @milestone.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@milestone.errors.count, "error") %> prohibited this milestone from being saved:</h2>
@@ -10,15 +11,27 @@
       </ul>
     </div>
   <% end %>
+
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
+
   <div class="field">
     <%= f.label :deadline %><br />
     <%= f.datetime_select :deadline %>
   </div>
+
+  <p><%= link_to_add_fields "Add Task", f, :tasks %></p>
+
+  <div id="tasks">
+    <%= f.fields_for :tasks do |builder| %>
+      <%= render "task_fields", :f => builder, :milestone => @milestone %>
+    <% end %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
+
 <% end %>
