--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="grid_6 omega">
           <% if logged_in? %>
             <div id="navigation" style="float:left;">
-              <%= button_to "Dashboard", root_path %><%= button_to "Help", root_path %>
+              <%= button_to "Dashboard", root_path %>
             </div>
           <% end %>
           <%= link_to root_path do %><%= image_tag "cmonk.png", :height => 52, :style => "float:right" %><% end %>
