--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -22,6 +22,11 @@
     <%= f.datetime_select :deadline %>
   </div>
 
+  <div class="field">
+    <%= f.label :priority %><br />
+    <%= f.select :priority, [["High", 1], ["Medium", 2], ["Low", 3]] %>
+  </div>
+
   <p><%= link_to_add_fields "Add Task", f, :tasks %></p>
 
   <div id="tasks">
