--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New milestone</h1>
+<div class="grid_12">
+  <h1>New milestone</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', milestones_path %>
+  <%= render 'form' %>
+</div>
