--- a/app/views/milestones/_milestone.html.erb
+++ b/app/views/milestones/_milestone.html.erb
@@ -1,11 +1,13 @@
 <% unless milestone.new_record? %>
-  <div class="milestone">
-    <%= link_to milestone.name, edit_project_milestone_path(milestone.project, milestone) %><span style="color:#666"> <%= milestone.deadline.to_s(:short) %></span>
-  </div>
-  <div class="tasks">
-    <ul>
-      <%= render milestone.tasks %>
-    </ul>
+  <div style="padding:10px;border:1px dashed #<%= milestone_color(milestone) %>">
+    <div class="milestone">
+      <%= link_to milestone.name, edit_project_milestone_path(milestone.project, milestone) %><span style="color:#666"> <%= milestone.deadline.to_s(:short) %></span>
+    </div>
+    <div class="tasks">
+      <ul>
+        <%= render milestone.tasks %>
+      </ul>
+    </div>
   </div>
   <br />
 <% end %>
