--- a/app/views/milestones/_task_fields.html.erb
+++ b/app/views/milestones/_task_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="fields">
+<div style="margin-bottom: 5px;" class="fields">
   <%= f.label :name %><br />
   <%= f.text_field :name %>
   <%= f.datetime_select :due %>
