--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing project</h1>
+<h3 class="title ui-state-default ui-corner-all">Editing project</h3>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', dashboard_path %>
