--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
 <div class="grid_12">
-  <h1>New project</h1>
+<h3 class="title ui-state-default ui-corner-all">New project</h3>
 
   <%= render 'form' %>
 </div>
