--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,10 +1,11 @@
+<div class="grid_12"><h3 class="title ui-state-default ui-corner-all"><%=  @image.task.name %></h3></div>
 <div id="projects" class="grid_3">
-  <h2><%= link_to @image.project.name, project_path(@image.project) %></h2>
-  <h4>version <%= @image.version %></h4>
+  
   <div id="approval">
     <%= render 'approval' %>
   </div>
-  <p><%= link_to("New annotation", new_image_annotation_path(@image), :remote => true) %> </p>
+  <hr />
+  <p><%= button_to("New annotation", new_image_annotation_path(@image), :remote => true, :method => :get) %> </p>
   <%# link_to((image_tag "pencil.gif", :height => 35, :class => 'border_left'), new_image_drawing_path(@image), :remote => true) %>
   <%# link_to("Draw", new_image_drawing_path(@image), :remote => true) %>
 
@@ -17,3 +18,6 @@
   <%= image_tag @image.attachment(:large), :width => 700, :id => 'img_note' %>
 </div>
 
+<%= content_for :nav do %>
+  <%= button_to "Back to Project", @image.project, :method => :get %>
+<% end %>
