--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -1,5 +1,5 @@
 <div class="grid_12">
-  <h1>New milestone</h1>
+  <h3 class="title ui-state-default ui-corner-all ">New milestone</h3>
 
   <%= render 'form' %>
 </div>
