--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,30 +1,31 @@
-<div id="projects" class="grid_3">
-  <h2><%= link_to @project.name, @project %></h2>
-  <h4>Milestones</h4>
-  <%= render @project.milestones %>
-</div>
-
-<div class="grid_9">
+<div class="grid_12">
+  <h3 class="title ui-state-default ui-corner-all"><%= @task.name %></h3>
 
   <ul id="aspects">
   
     <li id="graphics">
-      <div class="title ui-state-default ui-corner-all">Graphics</div>
+      <h3 class="title ui-state-default ui-corner-all">Graphics</h3>
       <div class="info">
-        <%= render @images %>
+        <div style="margin-bottom:20px;">
+          <%= render @images %>
+        </div>
         <br />
         <%= render "images/form" %>
         <br />
       </div>
     </li>
     <li id="graphics">
-      <div class="title ui-state-default ui-corner-all">Messages</div>
+      <h3 class="title ui-state-default ui-corner-all">Messages</h3>
       <div class="info">
         <%= render @comments %>
-        <br />
+        <hr />
         <%= render 'comments/form' %>
         <br />
       </div>
     </li>    
   </ul>
 </div>
+
+<%= content_for :nav do %>
+  <%= button_to "Back to Project", @project, :method => :get %>
+<% end %>
